--- a/Lab1/Lab1.vcxproj.filters
+++ b/Lab1/Lab1.vcxproj.filters
@@ -102,7 +102,7 @@
     <ClCompile Include="include\glm\detail\glm.cpp">
       <Filter>Header Files\template-built-ins\glm\detail</Filter>
     </ClCompile>
-    <ClCompile Include="02_02_fata_spate_poligon.cpp">
+    <ClCompile Include="03_03_resize.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
